# mibel-forecasting

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
notebooks/: 01_dam_baselines.ipynb  02_lear.ipynb  03_lear_robustness.ipynb  04_lear_technical_indicators.ipynb
paper_forecasting/: .gitignore  build_paper_inputs.py  forecasting_paper.bbl  forecasting_paper.tex  paper_inputs.txt  refs.bib  ti_degradation.csv  zero_hour_share.csv
reports/diagnostics/: demir_2019_ti_parameter_audit_2026_05.md  exogenous_audit_2026_05.md  lear_robustness_2026_05.csv  lear_robustness_2026_05.md  lear_robustness_dropped_days_2026_05.csv  technical_indicators_2026_05.csv  technical_indicators_2026_05.md  technical_indicators_dropped_days_2026_05.csv  utc_migration_2026_05.md  v8_vs_esios_2024_summary.md
scripts/: _finish_diagnostic_from_parquet.py  diagnose_v8_vs_esios_2024.py
src/mibel_forecasting/: __init__.py
src/mibel_forecasting/data/: calendar.py  esios.py  loaders.py  splits.py
src/mibel_forecasting/evaluation/: _robustness.py  dm_test.py  metrics.py  recalibration.py
src/mibel_forecasting/features/: technical_indicators.py
src/mibel_forecasting/models/: base.py  lear.py  naive.py
tests/: test_calendar.py  test_dm_test.py  test_esios.py  test_lear.py  test_loaders.py  test_metrics.py  test_naive.py  test_recalibration.py  test_sentinel.py  test_splits.py  test_technical_indicators.py  test_temporal_integrity.py
