[project]
name = "mibel-forecasting"
version = "0.1.0"
description = "Electricity price forecasting on the Iberian market (MIBEL): DAM baselines, technical indicators, CID microstructure"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Carlo Vilches" }]
keywords = ["electricity", "forecasting", "MIBEL", "OMIE", "ESIOS", "EPF"]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "holidays>=0.50",
    "scikit-learn>=1.4,<2.0",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
notebooks = ["jupyterlab>=4.0", "ipykernel>=6.29"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mibel_forecasting"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["src/mibel_forecasting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that take more than a few seconds",
    "network: tests that require external network access (e.g. ESIOS API)",
]
